s3_uploader and terraform generator 50%

--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
       "other": "other"
     },
     "file_types": {
-      "media": ["jpg", "jpeg", "png", "mp4", "avi"],
+      "media": ["jpg", "jpeg", "png", "mp4", "mp3", "avi"],
       "documents": ["pdf", "docx", "xlsx"],
       "other": ["*"]
     },
